#tree: 100%-275px max-width (prevents menu overlap)

--- a/ctvu/css/vu.css
+++ b/ctvu/css/vu.css
@@ -59,6 +59,7 @@ iframe {
 	right: 0px;
 	bottom: 0px;
 	font-size: 120%;
+	max-width: calc(100% - 275px);
 }
 
 #tree div {
